refactor: offer mappers, user mappers, technology mappers